[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp"
version = "0.1.0"
description = "VRP — the Value Routing Protocol kernel. TCP/IP for value: universal value-address, least-friction multi-hop routing, TCP-style reliable settlement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Spektre Labs" }]
keywords = ["routing", "payments", "protocol", "value-routing", "crypto", "settlement"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []  # pure stdlib kernel

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
vrp = "vrp:main"

[tool.setuptools]
py-modules = ["vrp"]
